Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
5.5(EOL)
-
None
-
5.5.54
Description
I'm only getting the assertion failure on 5.5.
If the problem really does not exist in 10.x, and not important for 5.5 release builds, please feel free to close as 'Won't fix'.
SELECT 1 MOD ADDTIME( '13:58:57', '00:00:01' ) + 2; |
mysqld: /data/src/5.5/sql/item_func.cc:1529: virtual void Item_func_additive_op::result_precision(): Assertion `arg1_int >= 0' failed.
|
160809 13:26:51 [ERROR] mysqld got signal 6 ;
|
|
#7 0x00007fad5f4d6312 in __GI___assert_fail (assertion=0xdb59b0 "arg1_int >= 0", file=0xdb56a0 "/data/src/5.5/sql/item_func.cc", line=1529, function=0xdb6c00 <Item_func_additive_op::result_precision()::__PRETTY_FUNCTION__> "virtual void Item_func_additive_op::result_precision()") at assert.c:101
|
#8 0x000000000080f92c in Item_func_additive_op::result_precision (this=0x7fad5a148650) at /data/src/5.5/sql/item_func.cc:1529
|
#9 0x000000000080d0bc in Item_num_op::fix_length_and_dec (this=0x7fad5a148650) at /data/src/5.5/sql/item_func.cc:822
|
#10 0x000000000080b2b3 in Item_func::fix_fields (this=0x7fad5a148650, thd=0x7fad5b274060, ref=0x7fad5a148720) at /data/src/5.5/sql/item_func.cc:231
|
#11 0x00000000005afe13 in setup_fields (thd=0x7fad5b274060, ref_pointer_array=0x7fad5a148da8, fields=..., mark_used_columns=MARK_COLUMNS_READ, sum_func_list=0x7fad5a148ba8, allow_sum_func=true) at /data/src/5.5/sql/sql_base.cc:8184
|
#12 0x00000000006313a6 in JOIN::prepare (this=0x7fad5a148868, rref_pointer_array=0x7fad5b277ce0, tables_init=0x0, wild_num=0, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x7fad5b277a70, unit_arg=0x7fad5b277390) at /data/src/5.5/sql/sql_select.cc:722
|
#13 0x0000000000639caa in mysql_select (thd=0x7fad5b274060, rref_pointer_array=0x7fad5b277ce0, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7fad5a148848, unit=0x7fad5b277390, select_lex=0x7fad5b277a70) at /data/src/5.5/sql/sql_select.cc:3074
|
#14 0x000000000063064a in handle_select (thd=0x7fad5b274060, lex=0x7fad5b2772e0, result=0x7fad5a148848, setup_tables_done_option=0) at /data/src/5.5/sql/sql_select.cc:319
|
#15 0x0000000000609b4d in execute_sqlcom_select (thd=0x7fad5b274060, all_tables=0x0) at /data/src/5.5/sql/sql_parse.cc:4689
|
#16 0x0000000000602e9e in mysql_execute_command (thd=0x7fad5b274060) at /data/src/5.5/sql/sql_parse.cc:2234
|
#17 0x000000000060c718 in mysql_parse (thd=0x7fad5b274060, rawbuf=0x7fad5a148078 "SELECT 1 MOD ADDTIME( '13:58:57', '00:00:01' ) + 2", length=50, parser_state=0x7fad6152d650) at /data/src/5.5/sql/sql_parse.cc:5934
|
#18 0x000000000060042d in dispatch_command (command=COM_QUERY, thd=0x7fad5b274060, packet=0x7fad5bf4e061 "SELECT 1 MOD ADDTIME( '13:58:57', '00:00:01' ) + 2", packet_length=50) at /data/src/5.5/sql/sql_parse.cc:1079
|
#19 0x00000000005ff5e7 in do_command (thd=0x7fad5b274060) at /data/src/5.5/sql/sql_parse.cc:793
|
#20 0x0000000000701799 in do_handle_one_connection (thd_arg=0x7fad5b274060) at /data/src/5.5/sql/sql_connect.cc:1270
|
#21 0x0000000000701526 in handle_one_connection (arg=0x7fad5b274060) at /data/src/5.5/sql/sql_connect.cc:1186
|
#22 0x00000000009438e7 in pfs_spawn_thread (arg=0x7fad5bf7a6c0) at /data/src/5.5/storage/perfschema/pfs.cc:1015
|
#23 0x00007fad6116a0a4 in start_thread (arg=0x7fad6152e700) at pthread_create.c:309
|
#24 0x00007fad5f59087d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
|