MDEV-10524 Assertion `arg1_int >= 0' failed in Item_func_additive_op::result_precision()

This change is a backport from 10.0 to 5.5 for:
1. The full patch for:
     MDEV-4841 Wrong character set of ADDTIME() and DATE_ADD()
     9adb6e991ec87b65d04929f115d9d0c899e4ab19

2. A small fragment of:
     MDEV-5298 Illegal mix of collations on timestamp
     03f6778d61a74bdd7d09103a16473a2a5624cf66
   which overrides Item_temporal_hybrid_func::cmp_type(),
   and adds a new line into cache_temporal_4265.result.