sql/item_func.h
@@ -39,6 +39,7 @@ protected:
     0 means get this number from first argument
   */
   uint allowed_arg_cols;
+  String *val_str_from_val_str_ascii(String *str, String *str2);
 
   void count_only_length(Item **item, uint nitems);
   void count_real_length(Item **item, uint nitems);
